style.css
.container {
  height: 5vh;
}
* {
  box-sizing: border-box;
  margin: 0;
}

.title-bar {
  height: 7vh;
  background-color: #107d40;
  color: white;
  font-size: 17px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.menu-bar {
  height: 5vh;
  display: flex;
  background-color: #f2f3f1;
}
.menu-icon-bar {
  height: 6vh;
}
.formula-bar {
  height: 6vh;
}

body {
  overflow: hidden;
}

.menu-item {
  position: relative;
  margin-left: 2%;
  cursor: pointer;
  padding: 0.7%;
}
.selected {
  border-bottom: 3px solid #107d40;
  padding-bottom: 0.5%;
}

.menu-item:hover {
  background-color: #e5e4e2;
}
.menu-icon-bar {
  display: flex;
  background-color: #f2f3f1;
  align-items: center;
}
.menu-icon {
  margin-left: 1%;
  padding: 0.7%;
}
.menu-icon:hover {
  background-color: #e5e4e2;
  cursor: pointer;
}
.selector {
  height: 70%;
  width: 11%;
}

.font-family-selector {
  position: relative;
  font-size: 15px;
}
.selector option {
  font-size: 18px;
}
.size-selector {
  height: 30px;
  width: 55px;
  font-size: 15px;
}

.size-selector option {
  font-size: 16px;
}
.sheet-bar {
  background-color: #f4f4f5;
  height: 7vh;
  display: flex;
  align-items: center;
}
.data-container {
  height: 70vh;
  display: flex;
  flex-wrap: wrap;
}

.select-all {
  width: 30px;
  height: 30px;
  border: 1px solid black;
}
.column-name-container {
  width: calc(100vh -30px);
  height: 30px;
  border: 1px solid black;
}
.row-name-container {
  width: 30px;
  width: calc(75vh-30px);
  border: 1px solid black;
}
.input-cell-container {
  width: calc(100vh-30px);
  height: calc(75vh-30px);
  border: 1px solid black;
}
.icon-left-scroll,
.icon-right-scroll {
  font-size: 30px;
  cursor: pointer;
}
.icon-add {
  color: #107d40;
  cursor: pointer;
  margin-bottom: 0.2%;
  padding-right: 1%;
  padding-left: 1%;
}
.icon-add:hover {
  transform: scale(1.2);
}
.sheet-tab-container {
  margin-bottom: 0.3%;
  padding: 1%;
  cursor: pointer;
  border-bottom: 6px solid #107d40;
  padding-bottom: 0.5%;
}
.sheet-tab-container:hover {
  background-color: #e5e4e2;
}

